tests/query_errors/non_const_in_args/error.txt
Error: 
    8 |     invalid_val = args.add[random::integer(0, 3)]
      | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The expression isn't constant and can't be evaluated at compile time

